--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
   <b>1.)Proxy 1(default) : </b>dash.intuit.com   <b>            Port : </b>8080
   </br>
   <b>2.)Proxy 2 : </b>dashsp.fdsprodpci.a.intuit.com   <b>      Port : </b>443
+</p>  </br>
+  <b>3.)Cognizant Proxy  : </b>proxy.cognizant.com   <b>      Port : </b>6050
 </p>  
     
 
