--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 
@@ -6,7 +7,9 @@
 <div align="right"><input type="button" align="center" style="height:25px; width:70px" onclick="window.location.href = 'https://karthikk12.github.io/page2/';" value="<< Back"/> </font></div>
 </div>
 
-<h1 style="font-size:20px; color: Black" align="center"> Parent Pom Dependency : </h1><hr>
+<h1 style="font-size:30px; color: Black" align="center"> Important Links & Proxy's  </h1><hr>
+
+<h1 style="font-size:20px; color: Black" align="center"> Parent Pom Dependency : </h1>
 
 <p>
 &ltnextgencore.version&gt1.1.29.516&lt/nextgencore.version&gt
@@ -100,7 +103,7 @@
 <b> JIRA - </b>https://jira.intuit.com/browse/PLF-8932 
 </br>
 	</br>
-<b>ssl labs - </b>https://www.ssllabs.com/ssltest/viewMyClient.html
+<b>SSL labs - </b>https://clienttest.ssllabs.com:8443/ssltest/viewMyClient.html
 </br>
 	</br>
 <b>Password reset- </b> passwordreset.intuit.com
@@ -109,8 +112,6 @@
    <hr>
 	 <h1 style="font-size:20px; color: Black" align="center"> Other URL's : </h1>
 	<p>
-	<b>SSL Labs:</b>  https://www.ssllabs.com/ssltest/viewMyClient.html
-	</br>
 	</br>
         <b>OPTIMUS TOOL Link(Ticket assigning purpose):</b>  http://172.22.106.43:8087/tasks
 	</br>
@@ -128,7 +129,7 @@
 	<b>Felix :</b> http://localhost:8080/nextgenweb/felix/system/console/bundles 
 </br>
 	</br>
-	<b>Nexus :</b>  https://artifact.intuit.com/artifactory/IBP.Intuit-Releases/com/intuit/cto/wi/
+	<b>Nexus :</b>  https://artifact.intuit.com/artifactory/IBP.Intuit-Releases/com/intuit/cto/wi/
 	</br>
 	</br>
 	<b>OCG Raise :</b> https://wiki.intuit.com/display/FDP/Process+to+raise+OCG+inquiry
@@ -139,7 +140,9 @@
   <p>
   <b>1.)Proxy 1(default) : </b>dash.intuit.com   <b>            Port : </b>8080
   </br>
+  </br>
   <b>2.)Proxy 2 : </b>dashsp.fdsprodpci.a.intuit.com   <b>      Port : </b>443
+</br>
 </br>
   <b>3.)Cognizant Proxy  : </b>proxy.cognizant.com   <b>      Port : </b>6050
 </p>  
