--- a/index.html
+++ b/index.html
@@ -147,7 +147,10 @@
   <b>2.)Proxy 2 : </b>dashsp.fdsprodpci.a.intuit.com   <b>      Port : </b>443
 </br>
 </br>
-  <b>3.)Cognizant Proxy  : </b>proxy.cognizant.com   <b>      Port : </b>6050
+<b>3.)Proxy 3 (IHP proxy) : </b>dash_siteprofiler-sl01-green-be-prd-us-west-2.fdsprodpci.a.intuit.com   <b>      Port : </b>443
+</br>
+</br>
+  <b>4.)Cognizant Proxy  : </b>proxy.cognizant.com   <b>      Port : </b>6050
 </p>  
     
 
