--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
 </br>
 	</br>
 	<b>SONAR UI :</b> https://sonarqube.tools-k8s.a.intuit.com/
+</br>
+	</br>
+	<b>Jenkins :</b> https://build.intuit.com/ifdp/job/ngwi-scripts/job/deploy-ibp2/
 
 </p>	
    <hr>
