--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	 <h1 style="font-size:20px; color: Black" align="center"> Other URL's : </h1>
 	<p>
 	</br>
-        <b>OPTIMUS TOOL Link(Ticket assigning purpose):</b>  http://172.22.106.43:8087/tasks
+        <b>OPTIMUS TOOL Link(Ticket assigning purpose):</b>  https://fdp-aggregation-prd-fdp-optimus.ifdp2-prod-usw2.iks.a.intuit.com/tasks
 	</br>
 	</br>
 	
