--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 </br>
 	</br>
 <b>Password reset- </b> passwordreset.intuit.com
+</br>
+	</br>
+<b>Google sheet- </b> https://docs.google.com/spreadsheets/d/1an4-el448DVFJCFEHncaUjGOTvMTKhv-3QBY3ChmLYI/edit#gid=1962863291
   </p>
   
    <hr>
