--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <b> JIRA - </b>https://jira.intuit.com/browse/PLF-8932 
 </br>
 	</br>
-<b>SSL labs - </b>https://clienttest.ssllabs.com:8443/ssltest/viewMyClient.html
+<b>SSL labs - </b>https://www.ssllabs.com/ssltest/
 </br>
 	</br>
 <b>Password reset- </b> passwordreset.intuit.com
